--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,15 @@ target
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+# Rust
+target/
+Cargo.lock
+
+# Python (যদি কিছু থাকে)
+__pycache__/
+*.pyc
+*.pyo
+
+# Misc
+.DS_Store
+*.log
