--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,7 @@ edition = "2021"
 
 [dependencies]
 # পরে যোগ করবো যেমন: clap, anyhow ইত্যাদি
+[dependencies]
+cranelift = "0.108"
+cranelift-module = "0.108"
+cranelift-object = "0.108"
