--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,8 @@ cranelift = "0.108"
 cranelift-module = "0.108"
 cranelift-object = "0.108"
 cranelift-jit = "0.108"
+[dependencies]
+cranelift = "0.108"
+cranelift-module = "0.108"
+cranelift-object = "0.108"
+object = { version = "0.35", features = ["write_core"] }
